maj du formulaire

--- a/css/style-connect.css
+++ b/css/style-connect.css
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   font-family: "Hind Madurai", sans-serif;
 }
 
@@ -106,14 +106,33 @@ input {
   width: 100%;
 }
 
-main {
-  height: 100%;
-}
 main #section-authentication {
   width: 1440px;
   height: 100%;
 }
+@media screen and (min-width: 500px) {
+  main #section-authentication {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 650px) {
+  main #section-authentication {
+    width: 600px;
+  }
+}
+@media screen and (min-width: 950px) {
+  main #section-authentication {
+    width: 900px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  main #section-authentication {
+    width: 1440px;
+  }
+}
 main #section-authentication .container {
+  display: flex;
+  flex-direction: column;
   z-index: 9;
   position: relative;
   width: 100%;
@@ -125,6 +144,17 @@ main #section-authentication .container {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+}
+@media screen and (min-width: 950px) {
+  main #section-authentication .container {
+    z-index: 9;
+    position: relative;
+    width: 100%;
+    height: 80%;
+    max-width: 100%;
+    min-height: 480px;
+    top: 10%;
+  }
 }
 main #section-authentication .form-container {
   position: absolute;
@@ -237,4 +267,13 @@ main #section-authentication .overlay-right {
 }
 main #section-authentication .container.right-panel-active .overlay-right {
   transform: translateX(20%);
+}
+main #section-authentication a#return-homapage {
+  position: absolute;
+  left: 50%;
+  top: 90%;
+  transform: translate(-50%, -50%);
+  padding: 12px 24px;
+  color: #fff;
+  background-color: #ff5e38;
 }/*# sourceMappingURL=style-connect.css.map */
