--- a/css/style-connect.scss
+++ b/css/style-connect.scss
@@ -25,7 +25,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   font-family: "Hind Madurai", sans-serif;
 }
 
@@ -116,14 +116,41 @@ input {
   width: 100%;
 }
 
-main {
+main #section-authentication {
+  width: 1440px;
   height: 100%;
 
-  #section-authentication {
-    width: 1440px;
-    height: 100%;
+  @media screen and (min-width: 500px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 650px) {
+    width: 600px;
+  }
 
-    .container {
+  @media screen and (min-width: 950px) {
+    width: 900px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    width: 1440px;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    z-index: 9;
+    position: relative;
+    width: 100%;
+    height: 80%;
+    max-width: 100%;
+    min-height: 480px;
+    top: 10%;
+    overflow: hidden;
+    background-color: $white;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+
+    @media screen and (min-width: 950px) {
       z-index: 9;
       position: relative;
       width: 100%;
@@ -131,144 +158,153 @@ main {
       max-width: 100%;
       min-height: 480px;
       top: 10%;
-      overflow: hidden;
-      background-color: $white;
-      border-radius: 10px;
-      box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
-
     }
+  }
 
-    .form-container {
+  .form-container {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+
+    &::before {
+      z-index: 999;
+      content: "";
       position: absolute;
-      top: 0;
-      height: 100%;
-      transition: all 0.6s ease-in-out;
+      top: 0px;
+      left: 0px;
+      border-width: 0;
+      border-style: solid;
+      border-right-color: $white;
+      border-top-color: #fafafb;
+      border-left-color: #fafafb;
 
-      &::before {
-        z-index: 999;
-        content: "";
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        border-width: 0;
-        border-style: solid;
-        border-right-color: $white;
-        border-top-color: #fafafb;
-        border-left-color: #fafafb;
-        
-        border-bottom-color: $white;
-        border-radius: 0 0 5px 0;
-        transition: border 0.5s ease-out;
-        box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
-      }
-
-      &:hover::before {
-        border-width: 50px;
-      }
+      border-bottom-color: $white;
+      border-radius: 0 0 5px 0;
+      transition: border 0.5s ease-out;
+      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
+        rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px,
+        rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
     }
 
-    .sign-in-container {
-      left: 0;
-      width: 50%;
-      z-index: 2;
-      box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    &:hover::before {
+      border-width: 50px;
     }
+  }
 
-    .container.right-panel-active .sign-in-container {
-      transform: translateX(100%);
-    }
+  .sign-in-container {
+    left: 0;
+    width: 50%;
+    z-index: 2;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+      rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+      rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  }
 
-    .sign-up-container {
-      left: 0;
-      width: 50%;
+  .container.right-panel-active .sign-in-container {
+    transform: translateX(100%);
+  }
+
+  .sign-up-container {
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+  }
+
+  .container.right-panel-active .sign-up-container {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6s;
+  }
+
+  @keyframes show {
+    0%,
+    49.99% {
       opacity: 0;
       z-index: 1;
     }
 
-    .container.right-panel-active .sign-up-container {
-      transform: translateX(100%);
+    50%,
+    100% {
       opacity: 1;
       z-index: 5;
-      animation: show 0.6s;
     }
+  }
 
-    @keyframes show {
-      0%,
-      49.99% {
-        opacity: 0;
-        z-index: 1;
-      }
+  .overlay-container {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 100;
+  }
 
-      50%,
-      100% {
-        opacity: 1;
-        z-index: 5;
-      }
-    }
+  .container.right-panel-active .overlay-container {
+    transform: translateX(-100%);
+  }
 
-    .overlay-container {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      width: 50%;
-      height: 100%;
-      overflow: hidden;
-      transition: transform 0.6s ease-in-out;
-      z-index: 100;
-    }
+  .overlay {
+    background: $main-blue;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: $white;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+  }
 
-    .container.right-panel-active .overlay-container {
-      transform: translateX(-100%);
-    }
+  .container.right-panel-active .overlay {
+    transform: translateX(50%);
+  }
 
-    .overlay {
-      background: $main-blue;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: 0 0;
-      color: $white;
-      position: relative;
-      left: -100%;
-      height: 100%;
-      width: 200%;
-      transform: translateX(0);
-      transition: transform 0.6s ease-in-out;
-    }
+  .overlay-panel {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+  }
 
-    .container.right-panel-active .overlay {
-      transform: translateX(50%);
-    }
+  .overlay-left {
+    transform: translateX(-20%);
+  }
 
-    .overlay-panel {
-      position: absolute;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      padding: 0 40px;
-      text-align: center;
-      top: 0;
-      height: 100%;
-      width: 50%;
-      transform: translateX(0);
-      transition: transform 0.6s ease-in-out;
-    }
+  .container.right-panel-active .overlay-left {
+    transform: translateX(0);
+  }
 
-    .overlay-left {
-      transform: translateX(-20%);
-    }
+  .overlay-right {
+    right: 0;
+    transform: translateX(0);
+  }
 
-    .container.right-panel-active .overlay-left {
-      transform: translateX(0);
-    }
+  .container.right-panel-active .overlay-right {
+    transform: translateX(20%);
+  }
 
-    .overlay-right {
-      right: 0;
-      transform: translateX(0);
-    }
-
-    .container.right-panel-active .overlay-right {
-      transform: translateX(20%);
-    }
+  a#return-homapage {
+    position: absolute;
+    left: 50%;
+    top: 90%;
+    transform: translate(-50%,-50%);
+    padding: 12px 24px;
+    color: $white;
+    background-color: $btn-red;
   }
 }
