--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -1177,8 +1177,9 @@ div#confirmed-error:hover {
   width: 80%;
   max-width: 500px;
   height: 40px;
-  padding-left: 10px;
-  border-radius: 8px;
+  border: none;
+  border-bottom: 1px solid #070606;
+  background-color: transparent;
 }
 @media screen and (min-width: 1200px) {
   .container-crud-book-tabs div.search-add-crud-book div.search-crud-input form div.group-search-standard input.input-search {
@@ -1187,11 +1188,11 @@ div#confirmed-error:hover {
 }
 .container-crud-book-tabs div.search-add-crud-book div.search-crud-input form div.group-search-standard input.btn-search {
   display: block;
-  width: 20%;
-  max-width: 200px;
-  height: 40px;
+  padding: 12px;
+  background-image: url(../img/picto/search-lg.svg);
+  background-repeat: no-repeat;
   border-radius: 8px;
-  background-color: #0868ae;
+  background-color: transparent;
   border: #0868ae;
   color: #fff;
   font-weight: bold;
