--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -1333,8 +1333,9 @@ div#confirmed-error {
             width: 80%;
             max-width: 500px;
             height: 40px;
-            padding-left: 10px;
-            border-radius: 8px;
+            border: none;
+            border-bottom: 1px solid $black;
+            background-color: transparent;
 
             @media screen and (min-width: 1200px) {
               width: 50%;
@@ -1343,11 +1344,11 @@ div#confirmed-error {
 
           input.btn-search {
             display: block;
-            width: 20%;
-            max-width: 200px;
-            height: 40px;
+            padding: 12px;
+            background-image: url(../img/picto/search-lg.svg);
+            background-repeat: no-repeat;
             border-radius: 8px;
-            background-color: $main-blue;
+            background-color: transparent;
             border: $main-blue;
             color: $white;
             font-weight: bold;
