--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -16,9 +16,9 @@ main {
     padding-top: 70px;
   }
 
-  #Breadcrumb {
+  ul#Breadcrumb {
       display: flex;
-
+      margin-top: 10px;
 
     li {
       margin-right: 10px;
