--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -371,16 +371,29 @@ header#side-bar-log {
             margin-bottom: 5px;
             white-space: nowrap;
           }
+          li {
+            a#profil {
+              color: $white;
+              margin-left: 55px;
+              white-space: nowrap;
 
-          a#profil {
-            color: $white;
-            margin-left: 55px;
-            white-space: nowrap;
+              img#profil-pict {
+                position: absolute;
+                top: 6px;
+                left: 8px;
+              }
 
-            img#profil-pict {
+              span {
+                position: absolute;
+                top: 20px;
+                left: 80px;
+              }
+            }
+
+            a#btn-side-logout {
               position: absolute;
-              top: 6px;
-              left: 8px;
+              top: -5px;
+              left: 200px;
             }
           }
         }
@@ -397,7 +410,7 @@ header#side-bar-log {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 70px;
+  height: 50px;
   background-color: $main-blue;
   z-index: 9999;
   align-items: center;
@@ -423,6 +436,8 @@ header#side-bar-log {
 // ----------  CLASS COMMUNE - DASHBOARD ----------
 
 div.container-dashboard-base {
+  height: fit-content;
+  padding-bottom: 80px;
   .box-dashboard {
     width: 100%;
     height: fit-content;
@@ -474,6 +489,11 @@ div.container-dashboard-base {
           height: 100px;
           width: auto;
           margin-right: 20px;
+          margin-bottom: 10px;
+
+          @media screen and (min-width: 326px) {
+            margin-bottom: inherit;
+          }
         }
 
         ul.container-description {
@@ -503,7 +523,7 @@ div.container-dashboard-base {
         flex-wrap: wrap;
         align-items: center;
         flex-direction: column;
-        justify-content:space-evenly;
+        justify-content: space-evenly;
 
         @media screen and (min-width: 1250px) {
           width: 60%;
@@ -525,8 +545,8 @@ div.container-dashboard-base {
         div.container-btn-wishlist {
           display: flex;
           justify-content: space-evenly;
-          a.btn-more-time-loan {
 
+          a.btn-more-time-loan {
             &:hover {
               background-color: #05497b;
               cursor: pointer;
@@ -534,6 +554,9 @@ div.container-dashboard-base {
           }
 
           input.delete-favorit-book {
+            position: absolute;
+            top: -24px;
+            left: 30px;
             background-image: url("../img/picto/trash-03\ \(1\).svg");
             background-size: cover;
             background-position: center;
@@ -547,7 +570,69 @@ div.container-dashboard-base {
             margin-right: 20px;
 
             @media screen and (min-width: 350px) {
-              position: inherit;
+              position: absolute;
+              top: -24px;
+              left: 30px;
+            }
+            
+            @media screen and (min-width: 400px) {
+              position: absolute;
+              top: -24px;
+              left: 80px;
+            }
+
+            @media screen and (min-width: 500px) {
+              position: absolute;
+              top: -24px;
+              left: 130px;
+            }
+
+            @media screen and (min-width: 600px) {
+              position: absolute;
+              top: -24px;
+              left: 160px;
+            }
+
+            @media screen and (min-width: 600px) {
+              position: absolute;
+              top: -24px;
+              left: 200px;
+            }
+
+            @media screen and (min-width: 700px) {
+              position: absolute;
+              top: -24px;
+              left: 250px;
+            }
+
+            @media screen and (min-width: 800px) {
+              position: absolute;
+              top: -24px;
+              left: 300px;
+            }
+
+            @media screen and (min-width: 900px) {
+              position: absolute;
+              top: -24px;
+              left: 350px;
+            }
+
+            @media screen and (min-width: 950px) {
+              position: absolute;
+              top: -24px;
+              left: 230px;
+            }
+
+            @media screen and (min-width: 1050px) {
+              position: absolute;
+              top: -24px;
+              left: 280px;
+            }
+
+            @media screen and (min-width: 1150px) {
+              position: absolute;
+              top: -24px;
+              left: 320px;
             }
 
             @media screen and (min-width: 1250px) {
@@ -558,7 +643,6 @@ div.container-dashboard-base {
         a.btn-format-standard {
           display: block;
           padding: 15px;
-          font-weight: bold;
           border: none;
           border-radius: 8px;
           background-color: $main-blue;
