--- a/css/style.scss
+++ b/css/style.scss
@@ -290,7 +290,8 @@ p.sub-title-section {
 
       div#btn-responsive-search {
         position: absolute;
-        right: 60px;
+        right: 50px;
+        bottom: 19px;
 
         @media screen and (min-width: 500px) {
           position: absolute;
@@ -302,6 +303,7 @@ p.sub-title-section {
         }
 
         button#show-search-bar {
+          display: inherit;
           width: 30px;
           height: 30px;
           background-color: $main-blue;
