--- a/css/style.scss
+++ b/css/style.scss
@@ -495,6 +495,7 @@ section#section-main-hero {
     padding-top: 30px;
     padding-bottom: 50px;
     margin: 0 auto;
+    overflow: hidden;
 
     div#item-section-main-hero-left {
       z-index: 10;
@@ -509,7 +510,7 @@ section#section-main-hero {
       }
 
       @media screen and (min-width: 950px) {
-        width: 55%;
+        width: 50%;
       }
 
       @media screen and (min-width: 1200px) {
@@ -661,7 +662,7 @@ section#section-main-hero {
 
     @media screen and (min-width: 650px) {
       display: block;
-      width: 45%;
+      width: 50%;
     }
   }
 }
