--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -437,15 +437,15 @@ header#side-bar-log {
 
 div.container-dashboard-base {
   height: fit-content;
-  padding-bottom: 80px;
+  padding-bottom: 20px;
 
   .box-dashboard {
     width: 100%;
     height: fit-content;
     background-color: #fff;
     border-radius: 8px;
-    padding: 0 20px 20px 20px;
-    margin-bottom: 30px;
+    padding: 10px 20px 20px 20px;
+    margin-bottom: 40px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
     hr {
@@ -896,8 +896,8 @@ section#loan-register {
             height: fit-content;
             border-radius: 8px;
 
-            @media screen and (min-width: 500px) {
-              right: -60px;
+            @media screen and (min-width: 950px) {
+              right: -50px;
             }
 
             &:hover {
@@ -1118,11 +1118,6 @@ section#loan-register {
     }
 
     div#form-loan-register-left {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
 
       div.add-form-template-label-input {
         .label-form-add-book {
@@ -1218,11 +1213,6 @@ section#loan-register {
     }
 
     div#form-in-loan-register-left {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
 
       div.add-form-template-label-input {
         .label-form-add-book {
@@ -1366,6 +1356,7 @@ div#confirmed-error {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 
   div.search-add-crud-book {
     position: sticky;
@@ -1383,6 +1374,7 @@ div#confirmed-error {
         flex-direction: column;
         justify-content: center;
         align-items: baseline;
+        margin-top: -10px;
         padding: 5px;
 
         @media screen and (min-width: 1200px) {
@@ -1427,6 +1419,7 @@ div#confirmed-error {
             height: 40px;
             border-radius: 8px 0 0 8px;
             background-color: transparent;
+            padding-left: 10px;
 
             @media screen and (min-width: 1200px) {
               width: 50%;
